enable raw html of goldmark

--- a/_src/config.yaml
+++ b/_src/config.yaml
@@ -88,3 +88,9 @@ services:
     disableInlineCSS: true
   twitter:
     disableInlineCSS: true
+
+markup:
+  defaultMarkdownHandler: goldmark
+  goldmark:
+    renderer:
+      unsafe: true
