--- a/_src/config.yaml
+++ b/_src/config.yaml
@@ -51,6 +51,11 @@ markup:
     endLevel: 3
     ordered: false
     startLevel: 1
+  goldmark:
+    renderer:
+      unsafe: true
+  highlight:
+    style: dracula
 
 menu:
   main:
